project 7/r1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: r1-deploy
  namespace: proj-7
spec:
  replicas: 2
  selector:
    matchLabels:
      app: r1-app
  template:
    metadata:
      labels:
        app: r1-app
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: r1-app
      containers:
      - name: python-http
        image: python:alpine
        command: ["/bin/sh", "-c"]
        args:
          - |
            mkdir -p /r1-app && echo '<html>
              <head><title>Route-1</title></head>
              <body>
                <h1>You are at Route-1</h1>
              </body>
            </html>' > /r1-app/index.html && cd / && python3 -m http.server 5678
        ports:
        - containerPort: 5678


---
apiVersion: v1
kind: Service
metadata:
  name: r1-svc
  namespace: proj-7
  annotations:    
    alb.ingress.kubernetes.io/healthcheck-path: /r1-app/index.html
spec:
  selector:
    app: r1-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
