project 7/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-proj7
  namespace: proj-7
  annotations:
    # AWS ALB Ingress Controller Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: cwvj-ingress-proj7

    # Target Type and Listener Port
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]' # Added port 443 too

    # Health Check Settings (delegated per-service)
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200'

    ## SSL Settings
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:261358761470:certificate/e6e6b107-b04f-4148-b60d-5d46b167e32c
    alb.ingress.kubernetes.io/ssl-redirect: '443'  

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /r1
            pathType: Prefix
            backend:
              service:
                name: r1-svc
                port:
                  number: 80
          - path: /r2
            pathType: Prefix
            backend:
              service:
                name: r2-svc
                port:
                  number: 80
